--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
   </head>
   <body>
     <header>
+      <nav>
+        <a href="">
+          Web Studio
+        </a>
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li>
+          <img src="./img/post.svg" alt="Почта" />
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <img src="./img/tel.svg" alt="Телефон" />
+          <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </header>
     <main>
     </main>
