Создает секцию "Герой"

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       </ul>
     </header>
     <main>
+      <!-- Герой -->
+      <section>
+        <h1>эффективные решения для вашего бизнеса</h1>
+        <a href="">Заказать услугу</a>
+      </section>
     </main>
     <footer></footer>
   </body>
