--- a/index.html
+++ b/index.html
@@ -34,6 +34,44 @@
         <h1>эффективные решения для вашего бизнеса</h1>
         <a href="">Заказать услугу</a>
       </section>
+      <!-- Наши преимущества -->
+      <section>
+        <h2>Наши преимущества</h2>
+        <ul>
+          <li>
+            <img src="./img/antena1.svg" alt="Локатор" />
+            <h3>Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <img src="./img/clock1.svg" alt="Часы" />
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <img src="./img/diagram1.svg" alt="Диаграмма" />
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <img src="./img/astonaut1.svg" alt="Астронавт" />
+            <h3>Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer></footer>
   </body>
