Создает и добавляет картинки в секции "Чем мы занимаемся"

--- a/index.html
+++ b/index.html
@@ -72,6 +72,43 @@
           </li>
         </ul>
       </section>
+      <!-- Чем мы занимаемся -->
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <figure>
+              <img
+                src="./img/box1.jpg"
+                alt="Ноутбук"
+                width="380px"
+                height="294px"
+              />
+              <figcaption>Десктопные приложения</figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="./img/box2.jpg"
+                alt="Мобильный телефон"
+                width="380px"
+                height="294px"
+              />
+              <figcaption>Мобильные приложения</figcaption>
+            </figure>
+          </li>
+          <li>
+            <img
+              src="./img/box3.jpg"
+              alt="Монитор"
+              width="380px"
+              height="294px"
+            />
+            <figcaption>Дизайнерские решения</figcaption>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer></footer>
   </body>
