--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- Шапка -->
     <header>
       <nav>
-        <a href="">
+        <a href="/">
           Web Studio
         </a>
         <ul>
@@ -24,15 +25,16 @@
         </li>
         <li>
           <img src="./img/tel.svg" alt="Телефон" />
-          <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
+    <!-- Основаня страница -->
     <main>
       <!-- Герой -->
-      <section>
+      <section style="height: 600px;">
         <h1>эффективные решения для вашего бизнеса</h1>
-        <a href="">Заказать услугу</a>
+        <input type="button" value="Заказать услугу" />
       </section>
       <!-- Наши преимущества -->
       <section>
