--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h2>Наши преимущества</h2>
         <ul>
           <li>
-            <img src="./img/antena1.svg" alt="Локатор" />
+            <img src="./img/features/antena1.svg" alt="Локатор" />
             <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
@@ -49,7 +49,7 @@
             </p>
           </li>
           <li>
-            <img src="./img/clock1.svg" alt="Часы" />
+            <img src="./img/features/clock1.svg" alt="Часы" />
             <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
@@ -57,7 +57,7 @@
             </p>
           </li>
           <li>
-            <img src="./img/diagram1.svg" alt="Диаграмма" />
+            <img src="./img/features/diagram1.svg" alt="Диаграмма" />
             <h3>Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
@@ -65,7 +65,7 @@
             </p>
           </li>
           <li>
-            <img src="./img/astonaut1.svg" alt="Астронавт" />
+            <img src="./img/features/astonaut1.svg" alt="Астронавт" />
             <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
