Перносит иконки в Activity и вносит правки

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
           <li>
             <figure>
               <img
-                src="./img/box1.jpg"
+                src="./img/activity/box1.jpg"
                 alt="Ноутбук"
-                width="380px"
-                height="294px"
+                width="380"
+                height="294"
               />
               <figcaption>Десктопные приложения</figcaption>
             </figure>
@@ -92,14 +92,27 @@
           <li>
             <figure>
               <img
-                src="./img/box2.jpg"
+                src="./img/activity/box2.jpg"
                 alt="Мобильный телефон"
-                width="380px"
-                height="294px"
+                width="380"
+                height="294"
               />
               <figcaption>Мобильные приложения</figcaption>
             </figure>
           </li>
+          <li>
+            <figure>
+              <img
+                src="./img/activity/box3.jpg"
+                alt="Монитор"
+                width="380"
+                height="294"
+              />
+              <figcaption>Дизайнерские решения</figcaption>
+            </figure>
+          </li>
+        </ul>
+      </section>
           <li>
             <img
               src="./img/box3.jpg"
