Добавляет секцию Наша команда

--- a/index.html
+++ b/index.html
@@ -113,14 +113,179 @@
           </li>
         </ul>
       </section>
+      <!-- Наша команда -->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <!-- Джон Смит -->
           <li>
             <img
-              src="./img/box3.jpg"
-              alt="Монитор"
-              width="380px"
-              height="294px"
+              src="./img/team_card/tc1.jpg"
+              alt="Фото Джон Смит"
+              width="278"
+              height="260"
             />
-            <figcaption>Дизайнерские решения</figcaption>
+            <h3 lang="en">John Smith</h3>
+            <p lang="en">Product Designer</p>
+            <ul>
+              <li>
+                <a href=""
+                  ><img
+                    src="./img/social_links/instagram.svg"
+                    alt="instagram Джон Смит"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./img/social_links/twitter.svg"
+                    alt="twitter Джон Смит"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img
+                    src="./img/social_links/facebook.svg"
+                    alt="facebook Джон Смит"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./img/social_links/linkedin.svg"
+                    alt="linkedin Джон Смит"
+                /></a>
+              </li>
+            </ul>
+          </li>
+          <!-- Марта Стеварт -->
+          <li>
+            <img
+              src="./img/team_card/tc2.jpg"
+              alt="Фото Марта Стеварт"
+              width="278"
+              height="260"
+            />
+            <h3 lang="en">Marta Stewart</h3>
+            <p lang="en">Frontend Developer</p>
+            <ul>
+              <li>
+                <a href=""
+                  ><img
+                    src="./img/social_links/instagram.svg"
+                    alt="instagram Марта Стеварт"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./img/social_links/twitter.svg"
+                    alt="twitter Марта Стеварт"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./img/social_links/facebook.svg"
+                    alt="facebook Марта Стеварт"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./img/social_links/linkedin.svg"
+                    alt="linkedin Марта Стеварт"
+                /></a>
+              </li>
+            </ul>
+          </li>
+          <!-- Роберт Якис -->
+          <li>
+            <img
+              src="./img/team_card/tc3.jpg"
+              alt="Фото Роберт Якис"
+              width="278"
+              height="260"
+            />
+            <h3 lang="en">Robert Jakis</h3>
+            <p lang="en">Marketing</p>
+            <ul>
+              <li>
+                <a href=""
+                  ><img
+                    src="./img/social_links/instagram.svg"
+                    alt="instagram Роберт Якис"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./img/social_links/twitter.svg"
+                    alt="twitter Роберт Якис"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./img/social_links/facebook.svg"
+                    alt="facebook Роберт Якис"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./img/social_links/linkedin.svg"
+                    alt="linkedin Роберт Якис"
+                /></a>
+              </li>
+            </ul>
+          </li>
+          <!-- Мартин Дое -->
+          <li>
+            <img
+              src="./img/team_card/tc4.jpg"
+              alt="Фото Мартин Дое"
+              width="278"
+              height="260"
+            />
+            <h3 lang="en">Martin Doe</h3>
+            <p lang="en">UI Designer</p>
+            <ul>
+              <li>
+                <a href=""
+                  ><img
+                    src="./img/social_links/instagram.svg"
+                    alt="instagram Мартин Дое"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./img/social_links/twitter.svg"
+                    alt="twitter Мартин Дое"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./img/social_links/facebook.svg"
+                    alt="facebook Мартин Дое"
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img
+                    src="./img/social_links/linkedin.svg"
+                    alt="linkedin Мартин Дое"
+                /></a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
           </li>
         </ul>
       </section>
