Добавляет секцию Наши клиенты

--- a/index.html
+++ b/index.html
@@ -286,6 +286,51 @@
           </li>
         </ul>
       </section>
+      <!-- Постоянные клиенты -->
+      <section>
+        <h2>Постоянные клиенты</h2>
+        <ul>
+          <li>
+            <a href=""
+              ><img
+                src="./img/our_clients/client_1.svg"
+                alt="Логотип YA & CO"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./img/our_clients/client_2.svg"
+                alt="Логотип Company Tagline Here"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./img/our_clients/client_3.svg" alt="Логотип Company" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./img/our_clients/client_4.svg"
+                alt="Логотип Foster Peters"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./img/our_clients/client_5.svg" alt="Логотип Brand" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./img/our_clients/client_6.svg"
+                alt="Логотип Company Tag Line"
+              />
+            </a>
           </li>
         </ul>
       </section>
