--- a/index.html
+++ b/index.html
@@ -336,5 +336,52 @@
       </section>
     </main>
     <footer></footer>
+    <!-- Подвал -->
+    <footer>
+      <section>
+        <!-- Адрес -->
+        <div>
+          <a href="/">
+            Web Studio
+          </a>
+          <address>
+            г. Киев, пр-т Леси Украинки, 26<br />
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </address>
+        </div>
+        <!-- Ссылки на соц сети -->
+        <div>
+          <p>присоединяйтесь</p>
+          <ul>
+            <li>
+              <a href="">
+                <img src="./img/social_links/instagram.svg" alt="instagram" />
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./img/social_links/twitter.svg" alt="twitter" />
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./img/social_links/facebook.svg" alt="facebook" />
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img src="./img/social_links/linkedin.svg" alt="linkedin" />
+              </a>
+            </li>
+          </ul>
+        </div>
+        <!-- Форма на рассылку -->
+        <div></div>
+      </section>
+    </footer>
+    <footer>
+      <p>2020 | Developed by GoIT Students</p>
+    </footer>
   </body>
 </html>
