--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Основаня страница -->
     <main>
       <!-- Герой -->
-      <section style="height: 600px;">
+      <section>
         <h1>эффективные решения для вашего бизнеса</h1>
         <input type="button" value="Заказать услугу" />
       </section>
@@ -79,37 +79,32 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <figure>
               <img
                 src="./img/activity/box1.jpg"
                 alt="Ноутбук"
                 width="380"
                 height="294"
               />
-              <figcaption>Десктопные приложения</figcaption>
+              <p>Десктопные приложения</p>
             </figure>
           </li>
           <li>
-            <figure>
               <img
                 src="./img/activity/box2.jpg"
                 alt="Мобильный телефон"
                 width="380"
                 height="294"
               />
-              <figcaption>Мобильные приложения</figcaption>
-            </figure>
+              <p>Мобильные приложения</p>
           </li>
           <li>
-            <figure>
               <img
                 src="./img/activity/box3.jpg"
                 alt="Монитор"
                 width="380"
                 height="294"
               />
-              <figcaption>Дизайнерские решения</figcaption>
-            </figure>
+              <p>Дизайнерские решения</p>
           </li>
         </ul>
       </section>
@@ -337,7 +332,6 @@
     </main>
     <!-- Подвал -->
     <footer>
-      <section>
         <!-- Адрес -->
         <div>
           <a href="/">
@@ -377,10 +371,7 @@
         </div>
         <!-- Форма на рассылку -->
         <div></div>
-      </section>
-    </footer>
-    <footer>
-      <p>2020 | Developed by GoIT Students</p>
+        <p>2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
