Фиксит блок "Форма на рассылку"

--- a/index.html
+++ b/index.html
@@ -369,7 +369,9 @@
           </ul>
         </div>
         <!-- Форма на рассылку -->
-        <div></div>
+        <div>
+          <p>Форма на рассылку</p>
+        </div>
         <p>2020 | Developed by GoIT Students</p>
     </footer>
   </body>
