--- a/index.html
+++ b/index.html
@@ -79,31 +79,31 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-              <img
-                src="./img/activity/box1.jpg"
-                alt="Ноутбук"
-                width="380"
-                height="294"
-              />
-              <p>Десктопные приложения</p>
+            <img
+              src="./img/activity/box1.jpg"
+              alt="Ноутбук"
+              width="380"
+              height="294"
+            />
+            <p>Десктопные приложения</p>
           </li>
           <li>
-              <img
-                src="./img/activity/box2.jpg"
-                alt="Мобильный телефон"
-                width="380"
-                height="294"
-              />
-              <p>Мобильные приложения</p>
+            <img
+              src="./img/activity/box2.jpg"
+              alt="Мобильный телефон"
+              width="380"
+              height="294"
+            />
+            <p>Мобильные приложения</p>
           </li>
           <li>
-              <img
-                src="./img/activity/box3.jpg"
-                alt="Монитор"
-                width="380"
-                height="294"
-              />
-              <p>Дизайнерские решения</p>
+            <img
+              src="./img/activity/box3.jpg"
+              alt="Монитор"
+              width="380"
+              height="294"
+            />
+            <p>Дизайнерские решения</p>
           </li>
         </ul>
       </section>
@@ -331,48 +331,50 @@
     </main>
     <!-- Подвал -->
     <footer>
-        <!-- Адрес -->
-        <div>
-          <a href="/">
-            Web Studio
-          </a>
-          <address>
-            г. Киев, пр-т Леси Украинки, 26<br />
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-          </address>
-        </div>
-        <!-- Ссылки на соц сети -->
-        <div>
-          <p>присоединяйтесь</p>
+      <!-- Адрес -->
+      <div>
+        <a href="/">
+          Web Studio
+        </a>
+        <address>
           <ul>
-            <li>
-              <a href="">
-                <img src="./img/social_links/instagram.svg" alt="instagram" />
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img src="./img/social_links/twitter.svg" alt="twitter" />
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img src="./img/social_links/facebook.svg" alt="facebook" />
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img src="./img/social_links/linkedin.svg" alt="linkedin" />
-              </a>
-            </li>
+            <li>г. Киев, пр-т Леси Украинки, 26</li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
           </ul>
-        </div>
-        <!-- Форма на рассылку -->
-        <div>
-          <p>Форма на рассылку</p>
-        </div>
-        <p>2020 | Developed by GoIT Students</p>
+        </address>
+      </div>
+      <!-- Ссылки на соц сети -->
+      <div>
+        <p>присоединяйтесь</p>
+        <ul>
+          <li>
+            <a href="">
+              <img src="./img/social_links/instagram.svg" alt="instagram" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./img/social_links/twitter.svg" alt="twitter" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./img/social_links/facebook.svg" alt="facebook" />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./img/social_links/linkedin.svg" alt="linkedin" />
+            </a>
+          </li>
+        </ul>
+      </div>
+      <!-- Форма на рассылку -->
+      <div>
+        <p>Форма на рассылку</p>
+      </div>
+      <p>2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
